--- a/workshop/cec2025/index.html
+++ b/workshop/cec2025/index.html
@@ -3878,7 +3878,7 @@
       <br><b>Final Submission Deadline</b>: <span style="text-decoration: line-through">March 31, 2025</span>
       <br><b>Notification Due</b>: <span style="text-decoration: line-through">April 1, 2025</span>
       <br><b>Workshop Date</b>: <span>June 8, 2025</span>
-      <br><b>Venue</b>: HEIC102B, 1F, Hangzhou International Expo Center, Hangzhou, China
+      <br><b>Venue</b>: 01-102B, Hangzhou International Expo Center, Hangzhou, China
       <!--<br><b>Book Chapter Version Due</b>: June 15, 2024 (23:59:59 AoE)-->
       <br>
     </div>
@@ -3986,7 +3986,7 @@
         
         <tr>
           <td align="center" style="vertical-align:top">15:30 pm – 16:00 pm</td>
-          <td><b>Oral Presentation Session</b> (10 min per talk + 2 min Q&amp;A)</td>
+          <td><b>Oral Presentation Session</b> (12 min per talk + 3 min Q&amp;A)</td>
         </tr>
         <tr>
           <td align="center" style="vertical-align:top"></td>
@@ -3998,9 +3998,6 @@
                 Multi-Objective Optimization Algorithms</li>
               <li>Shixuan Zhou, Yi Xiang. Sparse
                 Discriminative Feature Selection for Critical Scenario Identification in Self-Driving Cars</li>
-
-              <li>Pengfei Lu, Ping Zhang. LogisticsLLM:
-                Network Freight Price Prediction Based on Large Language Models</li>
             </ol>
           </td>
         </tr>
@@ -4011,14 +4008,16 @@
         </tr>
 
         <tr>
-          <td align="center" style="vertical-align:top">16:20 pm – 17:20 pm</td>
-          <td><b>Oral Presentation Session 2</b> (10 min per talk + 2 min Q&amp;A)</td>
+          <td align="center" style="vertical-align:top">16:20 pm – 17:50 pm</td>
+          <td><b>Oral Presentation Session</b> (12 min per talk + 3 min Q&amp;A)</td>
         </tr>
         <tr>
           <td align="center" style="vertical-align:top"></td>
           <td>
-            <ol start="4">
+            <ol start="3">
               <!-- <li>Xueming Yan, Han Huang, Yaochu Jin. Neural Architecture Search Based on Self-Attention Alignment</li> -->
+              <li>Pengfei Lu, Ping Zhang. LogisticsLLM:
+                Network Freight Price Prediction Based on Large Language Models</li>
               <li>Ying Huang, Cao Xiaojian. Multimodal
                 Multi-Objective Evolutionary Algorithm with Hierarchical Ranking and Special Crowding Distance</li>
               <li>Gan-yi Tang, Gui-Fu Lu, Fumiva lida. Tensorized
@@ -4074,7 +4073,7 @@
           </td>
         </tr> -->
         <tr>
-          <td align="center" style="vertical-align:top">17:20 pm – 17:30 pm</td>
+          <td align="center" style="vertical-align:top">17:50 pm – 18:00 pm</td>
           <td><b>Award Ceremony</b></td>
         </tr>
         <!-- <tr>
@@ -4252,7 +4251,8 @@
             <img border="0" width="156" height="144" src="./MMDO_FILES/lzc.png">
             <span style="font-size: 16px;display: block;text-align: center;padding-top: 8px;">
               <a href="https://www.cs.cityu.edu.hk/~zhichalu/" target="_blank">Zhichao Lu</a>
-              <br><span style="font-size: 12px;">Department of Computer Science,</span>
+              <br><span style="font-size: 12px;">Assistant Professor,</span>
+              <!-- <br><span style="font-size: 12px;">Department of Computer Science,</span> -->
               <br><span style="font-size: 12px;">City University of Hong Kong</span>
             </span>
           </td>
@@ -4278,7 +4278,8 @@
             <img border="0" width="156" height="194.6" src="./MMDO_FILES/lj.png">
             <span style="font-size: 16px;display: block;text-align: center;padding-top: 8px;">
               <a href="https://www.mmdo.org.cn/workshop/cec2025/">Jiao Liu</a>
-              <br><span style="font-size: 12px;">School of Computer Science and Engineering,</span>
+              <br><span style="font-size: 12px;">Research Fellow,</span>
+              <!-- <br><span style="font-size: 12px;">School of Computer Science and Engineering,</span> -->
               <br><span style="font-size: 12px;">Nanyang Technological University</span>
             </span>
           </td>
@@ -4317,14 +4318,17 @@
     <h3>Accepted Papers</h3>
     <div class="overview">
       <ol>
+        <li>Jintai Chen, Fangqing Liu, Xueming Yan, Han Huang. Regionalized Metric Framework: A Novel Approach for
+          Evaluating Multimodal Multi-Objective
+          Optimization Algorithms</li>
         <li>Shixuan Zhou, Yi Xiang. Discriminative
           Feature Selection for Critical Scenario Identification in Self-Driving Cars</li>
         <li>Pengfei Lu, Ping Zhang. LogisticsLLM:
           Network
           Freight Price Prediction Based on Large Language Models</li>
-        <li>Jintai Chen, Fangqing Liu, Xueming Yan, Han Huang. Regionalized Metric Framework: A Novel Approach for
-          Evaluating Multimodal Multi-Objective
-          Optimization Algorithms</li>
+        <li>Ying Huang, Cao Xiaojian. Multimodal
+          Multi-Objective Evolutionary Algorithm with Hierarchical Ranking and Special Crowding Distance
+        </li>
         <li>Gan-yi Tang, Gui-Fu Lu, Fumiva lida. Tensorized
           multi-view
           subspace clustering by tensor nuclear norm and block diagonal representation
@@ -4332,15 +4336,6 @@
         <li>Yue Xie, Fumiya Iida, Kai-Fung Chu, Xing Wang. The Morphology-Control Trade-Off: Insights into Soft Robotic
           Efficiency
         </li>
-        <li>Ying Huang, Cao Xiaojian. Multimodal
-          Multi-Objective Evolutionary Algorithm with Hierarchical Ranking and Special Crowding Distance
-        </li>
-
-        <!-- <li>Ning zhang, Xueming Yan, Yaochu Jin. <a href="https://mmdo.org.cn/workshop/cec2025/"
-            target="_blank">Multimodal
-            Data Driven Teaching Mode for Vocational Colleges</a></li> -->
-
-
         <li>Gao You, Tao Qian. Investigation on
           Convergence
           Efficiency of Two-dimensional Adaptive Fourier Decompositions in Image Approximation</li>
