--- a/workshop/cec2025/index.html
+++ b/workshop/cec2025/index.html
@@ -3922,7 +3922,7 @@
   <br>
 
   <div class="container">
-    <h3>Workshop Agenda</h3>
+    <h3>Workshop Agenda(Sunday, June 08, 2025)</h3>
 
     <table style="font-size:14; width:100%; border: 1px solid blue; border-spacing: 2px;table-layout: fixed;border-collapse: separate;" id="agenda">
       <colgroup>
@@ -3992,7 +3992,6 @@
           <td align="center" style="vertical-align:top"></td>
           <td>
             <ol>
-              <!-- <li>Xueming Yan, Han Huang, Yaochu Jin. Neural Architecture Search Based on Self-Attention Alignment</li> -->
               <li>Jintai Chen, Fangqing Liu, Xueming Yan, Han Huang. Regionalized Metric Framework: A Novel Approach for
                 Evaluating Multimodal
                 Multi-Objective Optimization Algorithms</li>
@@ -4015,20 +4014,19 @@
           <td align="center" style="vertical-align:top"></td>
           <td>
             <ol start="3">
-              <!-- <li>Xueming Yan, Han Huang, Yaochu Jin. Neural Architecture Search Based on Self-Attention Alignment</li> -->
               <li>Pengfei Lu, Ping Zhang. LogisticsLLM:
                 Network Freight Price Prediction Based on Large Language Models</li>
               <li>Ying Huang, Cao Xiaojian. Multimodal
                 Multi-Objective Evolutionary Algorithm with Hierarchical Ranking and Special Crowding Distance</li>
-              <li>Gan-yi Tang, Gui-Fu Lu, Fumiva lida. Tensorized
+              <li>Gan-yi Tang, Gui-Fu Lu. Tensorized
                 multi-view subspace clustering by tensor nuclear norm and block diagonal representation</li>
-              <li>Yue Xie, Fumiya Iida, Kai-Fung Chu, Xing Wang. The Morphology-Control Trade-Off: Insights into Soft
+              <li>Yue Xie, Kai-Fung Chu, Xing Wang, Fumiya Iida. The Morphology-Control Trade-Off: Insights into Soft
                 Robotic Efficiency</li>
               
               <li>Gao You, Tao Qian. Investigation on
                 Convergence Efficiency of Two-dimensional Adaptive Fourier Decompositions in Image Approximation
               </li>
-              <li>Yazhi Li. A hybrid harmony search for
+              <li>Yazhi Li, Shen Hong, Cheng Yuwei. A hybrid harmony search for
                 distributed permutation flowshop scheduling with multimodal optimization</li>
             </ol>
           </td>
@@ -4316,37 +4314,18 @@
 
   <div class="container">
     <h3>Accepted Papers</h3>
-    <div class="overview">
+    <div class="overview">c
       <ol>
-        <li>Jintai Chen, Fangqing Liu, Xueming Yan, Han Huang. Regionalized Metric Framework: A Novel Approach for
-          Evaluating Multimodal Multi-Objective
-          Optimization Algorithms</li>
-        <li>Shixuan Zhou, Yi Xiang. Discriminative
-          Feature Selection for Critical Scenario Identification in Self-Driving Cars</li>
-        <li>Pengfei Lu, Ping Zhang. LogisticsLLM:
-          Network
-          Freight Price Prediction Based on Large Language Models</li>
-        <li>Ying Huang, Cao Xiaojian. Multimodal
-          Multi-Objective Evolutionary Algorithm with Hierarchical Ranking and Special Crowding Distance
-        </li>
-        <li>Gan-yi Tang, Gui-Fu Lu, Fumiva lida. Tensorized
-          multi-view
-          subspace clustering by tensor nuclear norm and block diagonal representation
-        </li>
-        <li>Yue Xie, Fumiya Iida, Kai-Fung Chu, Xing Wang. The Morphology-Control Trade-Off: Insights into Soft Robotic
-          Efficiency
-        </li>
-        <li>Gao You, Tao Qian. Investigation on
-          Convergence
-          Efficiency of Two-dimensional Adaptive Fourier Decompositions in Image Approximation</li>
-        <li>Yazhi Li. A hybrid harmony search for
-          distributed
-          permutation flowshop scheduling with multimodal optimization</li>
-        <li>Xueming Yan, Han Huang, Yaochu Jin. Neural
-          Architecture Search Based on Self-Attention Alignment</li>
-        <li>
-          Beiyin Pang, Yunyi Zhao, Shufan Yang. Data-Driven Calibration for Wearable Brain Functional Imaging Devices
-        </li>
+        <li>Jintai Chen, Fangqing Liu, Xueming Yan, Han Huang. Regionalized Metric Framework: A Novel Approach for Evaluating Multimodal Multi-Objective Optimization Algorithms</li>
+        <li>Shixuan Zhou, Yi Xiang. Discriminative Feature Selection for Critical Scenario Identification in Self-Driving Cars</li>
+        <li>Pengfei Lu, Ping Zhang. LogisticsLLM: Network Freight Price Prediction Based on Large Language Models</li>
+        <li>Ying Huang, Xiaojian Cao. Multimodal Multi-Objective Evolutionary Algorithm with Hierarchical Ranking and Special Crowding Distance</li>
+        <li>Gan-yi Tang, Gui-Fu Lu. Tensorized multi-view subspace clustering by tensor nuclear norm and block diagonal representation</li>
+        <li>Yue Xie, Kai-Fung Chu, Xing Wang, Fumiya Iida. The Morphology-Control Trade-Off: Insights into Soft Robotic Efficiency</li>
+        <li>Gao You, Tao Qian. Investigation on Convergence Efficiency of Two-dimensional Adaptive Fourier Decompositions in Image Approximation</li>
+        <li>Yazhi Li, Hong Shen, Yuwei Cheng. A hybrid harmony search for distributed permutation flowshop scheduling with multimodal optimization</li>
+        <li>Xueming Yan, Han Huang, Yaochu Jin. Neural Architecture Search Based on Self-Attention Alignment</li>
+        <li>Beiyin Pang, Yunyi Zhao, Shufan Yang. Data-Driven Calibration for Wearable Brain Functional Imaging Devices</li>
         <li>Siying Lv, Shuwei Zhu, Fang Wei. Adaptive Surrogate-Assisted Evolutionary Multi-Objective Community Detection Algorithm with Core Node Learning</li>
       </ol>
     </div>
