--- a/workshop/cec2025/index.html
+++ b/workshop/cec2025/index.html
@@ -3955,7 +3955,7 @@
 
         <tr>
           <td align="center" style="vertical-align:top">09:45 am – 10:30 am</td>
-          <td><b>Keynote 1:</b> Data-driven Federated Optimisation: From Small Surrogates to LLMs, by <a href="#section1">Yaochu Jin</a></td>
+          <td><b>Keynote 1:</b> Solving Combinatorial Optimization Problems via Graph Neural Networks and Diffusion Models, by <a href="#section1">Yaochu Jin</a></td>
         </tr>
 
         <tr>
@@ -4102,7 +4102,7 @@
           <td>&nbsp;&nbsp;&nbsp;</td>
           <td style="vertical-align:top;padding: 0px 23px;">
             <h5 style="margin-top:0">
-              <p style="font-size: 16px;"><b>Talk Title: Data-driven Federated Optimisation: From Small Surrogates to LLMs</b></p>
+              <p style="font-size: 16px;"><b>Talk Title: Solving Combinatorial Optimization Problems via Graph Neural Networks and Diffusion Models</b></p>
              
               <span style="line-height: 1.2;">
                 <!-- <b>Biography</b> -->
