--- a/workshop/cec2025/index.html
+++ b/workshop/cec2025/index.html
@@ -4314,7 +4314,7 @@
 
   <div class="container">
     <h3>Accepted Papers</h3>
-    <div class="overview">c
+    <div class="overview">
       <ol>
         <li>Jintai Chen, Fangqing Liu, Xueming Yan, Han Huang. Regionalized Metric Framework: A Novel Approach for Evaluating Multimodal Multi-Objective Optimization Algorithms</li>
         <li>Shixuan Zhou, Yi Xiang. Discriminative Feature Selection for Critical Scenario Identification in Self-Driving Cars</li>
