--- a/workshop/cec2025/index.html
+++ b/workshop/cec2025/index.html
@@ -3921,7 +3921,7 @@
 
   <br>
 
-  <div class="container">
+  <div class="container" id="session1">
     <h3>Workshop Agenda(Sunday, June 08, 2025)</h3>
 
     <table style="font-size:14; width:100%; border: 1px solid blue; border-spacing: 2px;table-layout: fixed;border-collapse: separate;" id="agenda">
@@ -3950,21 +3950,22 @@
 
         <tr>
           <td align="center" style="vertical-align:top">09:30 am – 09:45 am</td>
-          <td><b>Opening Remarks</b>, by Yaochu Jin</td>
+          <td><b>Opening Remarks</b>, by <a href="#section1">Yaochu Jin</a></td>
         </tr>
 
         <tr>
           <td align="center" style="vertical-align:top">09:45 am – 10:30 am</td>
-          <td><b>Keynote 1:</b> Solving Combinatorial Optimization Problems via Graph Neural Networks and Diffusion Models, by <a href="#section1">Yaochu Jin</a></td>
+          <td><b>Keynote 1:</b> Solving Combinatorial Optimization Problems via Graph Neural Networks and Diffusion Models, by <a href="#section1">Yaochu Jin (Chair Professor of AI,
+            Westlake University)</a></td>
         </tr>
 
         <tr>
           <td align="center" style="vertical-align:top">10:30 am – 11:15 am</td>
-          <td><b>Keynote 2:</b> Expensive Optimization via Relation</a>, by <a href="#k2">Aimin Zhou</a></td>
+          <td><b>Keynote 2:</b> Expensive Optimization via Relation</a>, by <a href="#k2">Aimin Zhou (Professor, East China Normal University)</a></td>
         </tr>
         <tr>
           <td align="center" style="vertical-align:top">11:15 am – 12:00 pm</td>
-          <td><b>Keynote 3:</b> Micro-scale searching algorithm and its application, by <a href="#k3">Han Huang</a></td>
+          <td><b>Keynote 3:</b> Micro-scale Searching Algorithm And Its Application, by <a href="#k3">Han Huang (Professor, South China University of Technology)</a></td>
         </tr>
         <tr>
           <td align="center" style="vertical-align:top">12:00 pm – 14:00 pm</td>
@@ -3973,15 +3974,15 @@
 
         <tr>
           <td align="center" style="vertical-align:top">14:00 pm – 14:30 pm</td>
-          <td><b>Keynote 4:</b> The Theory of Multi-View Learning and Its Applications, by <a href="#k4">Yazhou Ren</a></td>
+          <td><b>Keynote 4:</b> The Theory of Multi-View Learning and Its Applications, by <a href="#k4">Yazhou Ren (Associate Professor, University of Electronic Science and Technology of China)</a></td>
         </tr>
         <tr>
           <td align="center" style="vertical-align:top">14:30 pm – 15:00 pm</td>
-          <td><b>Keynote 5:</b> Automated Algorithm Design with Large Language Models, by <a href="#k5">Zhichao Lu</a></td>
+          <td><b>Keynote 5:</b> Automated Algorithm Design with Large Language Models, by <a href="#k5">Zhichao Lu (Assistant Professor, City University of Hong Kong)</a></td>
         </tr>
         <tr>
           <td align="center" style="vertical-align:top">15:00 pm – 15:30 pm</td>
-          <td><b>Keynote 6:</b> Evolutionary Transfer Optimization in Data-Driven Multiobjective Optimization, by <a href="#k6">Jiao Liu</a></td>
+          <td><b>Keynote 6:</b> Evolutionary Transfer Optimization in Data-Driven Multiobjective Optimization, by <a href="#k6">Jiao Liu (Research Fellow, Nanyang Technological University)</a></td>
         </tr>
         
         <tr>
@@ -3992,8 +3993,8 @@
           <td align="center" style="vertical-align:top"></td>
           <td>
             <ol>
-              <li>Regionalized Metric Framework: A Novel Approach for Evaluating Multimodal Multi-Objective Optimization Algorithms, by Fangqing Liu</li>
-              <li>Sparse Discriminative Feature Selection for Critical Scenario Identification in Self-Driving Cars, Shixuan Zhou</li>
+              <li>Regionalized Metric Framework: A Novel Approach for Evaluating Multimodal Multi-Objective Optimization Algorithms, by <a href="#session1">Fangqing Liu</a></li>
+              <li>Sparse Discriminative Feature Selection for Critical Scenario Identification in Self-Driving Cars, by <a href="#session1">Shixuan Zhou</a></li>
             </ol>
           </td>
         </tr>
@@ -4011,12 +4012,12 @@
           <td align="center" style="vertical-align:top"></td>
           <td>
             <ol start="3">
-              <li>The Morphology-Control Trade-Off: Insights into Soft Robotic Efficiency, by Yue Xie</li>
-              <li>Multimodal Multi-Objective Evolutionary Algorithm with Hierarchical Ranking and Special Crowding Distance, by Ying Huang</li>
-              <li>Tensorized multi-view subspace clustering by tensor nuclear norm and block diagonal representation, by Gan-yi Tang</li>
-              <li>LogisticsLLM: Network Freight Price Prediction Based on Large Language Models, by Pengfei Lu</li>
-              <li>Investigation on Convergence Efficiency of Two-dimensional Adaptive Fourier Decompositions in Image Approximation, by Gao You</li>
-              <li>A hybrid harmony search for distributed permutation flowshop scheduling with multimodal optimization, by Yazhi Li</li>
+              <li>The Morphology-Control Trade-Off: Insights into Soft Robotic Efficiency, by <a href="#session1">Yue Xie</a></li>
+              <li>Multimodal Multi-Objective Evolutionary Algorithm with Hierarchical Ranking and Special Crowding Distance, <a href="#session1">by Ying Huang</a></li>
+              <li>Tensorized multi-view subspace clustering by tensor nuclear norm and block diagonal representation, by <a href="#session1">Gan-yi Tang</a></li>
+              <li>LogisticsLLM: Network Freight Price Prediction Based on Large Language Models, by <a href="#session1">Pengfei Lu</a></li>
+              <li>Investigation on Convergence Efficiency of Two-dimensional Adaptive Fourier Decompositions in Image Approximation, by <a href="#session1">Gao You</a></li>
+              <li>A hybrid harmony search for distributed permutation flowshop scheduling with multimodal optimization, by <a href="#session1">Yazhi Li</a></li>
             </ol>
           </td>
         </tr>
@@ -4179,7 +4180,7 @@
           <td>&nbsp;&nbsp;&nbsp;</td>
           <td style="vertical-align:top; padding: 0px 23px;">
             <h5 style="margin-top:0">
-              <p style="font-size: 16px;"><b>Talk Title: Micro-scale searching algorithm and its application</b></p>
+              <p style="font-size: 16px;"><b>Talk Title: Micro-scale Searching Algorithm And Its Application</b></p>
 
               <span>
                 <!-- <b>Biography</b> -->
