--- a/workshop/cec2025/index.html
+++ b/workshop/cec2025/index.html
@@ -4014,18 +4014,13 @@
             <ol start="3">
               <li>The Morphology-Control Trade-Off: Insights into Soft Robotic Efficiency, by <a href="#session1">Yue Xie</a></li>
               <li>Multimodal Multi-Objective Evolutionary Algorithm with Hierarchical Ranking and Special Crowding Distance, <a href="#session1">by Ying Huang</a></li>
-              <li>Tensorized multi-view subspace clustering by tensor nuclear norm and block diagonal representation, by <a href="#session1">Gan-yi Tang</a></li>
+              <li>Tensorized Multi-View Subspace Clustering by Tensor Nuclear Norm and Block Diagonal Representation, by <a href="#session1">Gan-yi Tang</a></li>
               <li>LogisticsLLM: Network Freight Price Prediction Based on Large Language Models, by <a href="#session1">Pengfei Lu</a></li>
-              <li>Investigation on Convergence Efficiency of Two-dimensional Adaptive Fourier Decompositions in Image Approximation, by <a href="#session1">Gao You</a></li>
-              <li>A hybrid harmony search for distributed permutation flowshop scheduling with multimodal optimization, by <a href="#session1">Yazhi Li</a></li>
+              <li>Investigation On Convergence Efficiency of Two-Dimensional Adaptive Fourier Decompositions in Image Approximation, by <a href="#session1">Gao You</a></li>
+              <li>A Hybrid Harmony Search for Distributed Permutation Flowshop Scheduling with Multimodal Optimization, by <a href="#session1">Yazhi Li</a></li>
             </ol>
           </td>
         </tr>
-
-
-
-
-
 
         <!-- <tr>
           <td align="center" style="vertical-align:top">16:50 pm – 17:50 pm</td>
@@ -4307,13 +4302,13 @@
     <div class="overview">
       <ol>
         <li>Jintai Chen, Fangqing Liu, Xueming Yan, Han Huang. Regionalized Metric Framework: A Novel Approach for Evaluating Multimodal Multi-Objective Optimization Algorithms</li>
-        <li>Shixuan Zhou, Yi Xiang. Discriminative Feature Selection for Critical Scenario Identification in Self-Driving Cars</li>
+        <li>Shixuan Zhou, Yi Xiang. Discriminative Feature Selection for Critical Scenario Identification In Self-Driving Cars</li>
         <li>Yue Xie, Kai-Fung Chu, Xing Wang, Fumiya Iida. The Morphology-Control Trade-Off: Insights into Soft Robotic Efficiency</li>
         <li>Ying Huang, Xiaojian Cao. Multimodal Multi-Objective Evolutionary Algorithm with Hierarchical Ranking and Special Crowding Distance</li>
-        <li>Gan-yi Tang, Gui-Fu Lu. Tensorized multi-view subspace clustering by tensor nuclear norm and block diagonal representation</li>
+        <li>Gan-yi Tang, Gui-Fu Lu. Tensorized Multi-View Subspace Clustering by Tensor Nuclear Norm and Block Diagonal Representation</li>
         <li>Pengfei Lu, Ping Zhang. LogisticsLLM: Network Freight Price Prediction Based on Large Language Models</li>
-        <li>Gao You, Tao Qian. Investigation on Convergence Efficiency of Two-dimensional Adaptive Fourier Decompositions in Image Approximation</li>
-        <li>Yazhi Li, Hong Shen, Yuwei Cheng. A hybrid harmony search for distributed permutation flowshop scheduling with multimodal optimization</li>
+        <li>Gao You, Tao Qian. Investigation on Convergence Efficiency of Two-Dimensional Adaptive Fourier Decompositions in Image Approximation</li>
+        <li>Yazhi Li, Hong Shen, Yuwei Cheng. A Hybrid Harmony Search for Distributed Permutation Flowshop Scheduling with Multimodal Optimization</li>
         <li>Xueming Yan, Han Huang, Yaochu Jin. Neural Architecture Search Based on Self-Attention Alignment</li>
         <li>Beiyin Pang, Yunyi Zhao, Shufan Yang. Data-Driven Calibration for Wearable Brain Functional Imaging Devices</li>
         <li>Siying Lv, Shuwei Zhu, Fang Wei. Adaptive Surrogate-Assisted Evolutionary Multi-Objective Community Detection Algorithm with Core Node Learning</li>
@@ -4694,17 +4689,18 @@
     <div class="overview" style="text-align: center;display: flex; flex-direction: row;">
       <div style="display: flex; flex-direction: column;">
         <a href="https://en.westlake.edu.cn/" target="_blank" style="padding-bottom: 20px;padding-left: 20px"><img border="0" height="72" width="216" src="./MMDO_FILES/wlu_logo.png"></a>
-        <a href="https://www.dhu.edu.cn/" target="_blank"><img border="0" src="./MMDO_FILES/donghua.png"  height="90" width="90"></a>
+        <a href="https://www.dhu.edu.cn/" target="_blank"><img border="0" src="./MMDO_FILES/donghua.png"  height="72" width="232"></a>
       </div>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       <div style="display: flex; flex-direction: column;">
         <a href="https://www.gdufs.edu.cn/" target="_blank" style="padding-bottom: 20px;padding-left: 20px"><img border="0" height="72" width="330" src="./MMDO_FILES/gw_logo.png"></a>
-        <a href="https://mmdo.org.cn/workshop/cec2025/" target="_blank"><img border="0" height="80" width="280" src="./MMDO_FILES/kexin-new.png"></a>
+        <a href="https://cis.ieee.org/" target="_blank"><img border="0" height="72" width="216" src="./MMDO_FILES/cis-logo.png"></a>
       </div>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       <div style="display: flex; flex-direction: column;">
         <a href="https://www2.lehigh.edu/" target="_blank" style="padding-bottom: 20px;padding-left: 20px"><img border="0" height="72" width="270" src="./MMDO_FILES/lehigh.png"></a>
-        <a href="https://cis.ieee.org/" target="_blank"><img border="0" height="72" width="216" src="./MMDO_FILES/cis-logo.png"></a>
+        
+        <a href="https://mmdo.org.cn/workshop/cec2025/" target="_blank"><img border="0" height="80" width="280" src="./MMDO_FILES/kexin-new.png"></a>
       </div>
     </div>
   </div>
