--- a/workshop/cec2025/index.html
+++ b/workshop/cec2025/index.html
@@ -3955,8 +3955,8 @@
 
         <tr>
           <td align="center" style="vertical-align:top">09:45 am – 10:30 am</td>
-          <td><b>Keynote 1:</b> Solving Combinatorial Optimization Problems via Graph Neural Networks and Diffusion Models, by <a href="#section1">Yaochu Jin (Chair Professor of AI,
-            Westlake University)</a></td>
+          <td><b>Keynote 1:</b> Data-Driven Evolutionary Computation: What to Drive and How to Drive, by <a href="#section1">ZhiHui Zhan (Professor,
+            Nankai University)</a></td>
         </tr>
 
         <tr>
@@ -4075,7 +4075,7 @@
     <table>
       <tbody>
 
-        <tr class="container" id="k1">
+        <!-- <tr class="container" id="k1">
           <td style="vertical-align:top">
             <img border="0" width="156" height="195" src="./MMDO_FILES/jyc-clip.png">
             <span style="font-size: 16px;display: block;text-align: center;padding-top: 8px;">
@@ -4090,7 +4090,6 @@
               <p style="font-size: 16px;"><b>Talk Title: Solving Combinatorial Optimization Problems via Graph Neural Networks and Diffusion Models</b></p>
              
               <span style="line-height: 1.2;">
-                <!-- <b>Biography</b> -->
                 <br>He was an Alexander von Humboldt Professor for AI endowed by the German Federal Ministry of
                 Education and Research, Faculty of Technology, Bielefeld University, Germany. He is also a Distinguished
                 Chair in Computational Intelligence, Department of Computer Science, University of Surrey, Guildford
@@ -4104,6 +4103,30 @@
                 IEEE Transactions on Cognitive and Developmental Systems. He is the recipient of the 2025 IEEE Frank
                 Rosenblatt Award. He was named by the Web of Science as “a Highly Cited Researcher” from 2019 to 2024
                 consecutively. He is a Member of Academia Europaea.
+              </span>
+            </h5>
+          </td>
+        </tr> -->
+
+
+        <tr class="container" id="k1">
+          <td style="vertical-align:top">
+            <img border="0" width="156" height="195" src="./MMDO_FILES/zzh.png">
+            <span style="font-size: 16px;display: block;text-align: center;padding-top: 8px;">
+              <a href="https://mmdo.org.cn/workshop/cec2025/" target="_blank">ZhiHui Zhan</a>
+              <br><span style="font-size: 12px;">Professor,</span>
+              <br><span style="font-size: 12px;">Nankai University</span>
+            </span>
+          </td>
+          <td>&nbsp;&nbsp;&nbsp;</td>
+          <td style="vertical-align:top;padding: 0px 23px;">
+            <h5 style="margin-top:0">
+              <p style="font-size: 16px;"><b>Talk Title: Data-Driven Evolutionary Computation: What to Drive and How to Drive?</b></p>
+             
+              <span style="line-height: 1.2;">
+                <!-- <b>Biography</b> -->
+                <br>Zhi-Hui Zhan (Fellow, IEEE) is currently a Changjiang Scholar Young Professor and Gifted Professor with the College of Artificial Intelligence, Nankai University, Tianjin, China. His current research interests include evolutionary computation, swarm intelligence, and their applications in real-world problems.
+Prof. Zhan is an IEEE Fellow. He was a recipient of the IEEE Computational Intelligence Society (CIS) Outstanding Early Career Award in 2021, the Outstanding Youth Science Foundation from National Natural Science Foundations of China (NSFC) in 2018, and the Wu Wen-Jun Artificial Intelligence Excellent Youth from the Chinese Association for Artificial Intelligence in 2017. He is listed as the Highly Cited Researcher by Clarivate Analytics, is listed as the World’s Top 2% Scientist for both Career-Long Impact and Year Impact in Artificial Intelligence, and is listed as the Elsevier Highly Cited Chinese Researcher in Computer Science from 2014 to 2024. He is currently an Associate Editor of the IEEE Transactions on Evolutionary Computation, the IEEE Transactions on Emerging Topics in Computational Intelligence, the IEEE Transactions on Artificial Intelligence, and the IEEE Transactions on Systems, Man and Cybernetics: Systems.
               </span>
             </h5>
           </td>
