--- a/workshop/cec2025/index.html
+++ b/workshop/cec2025/index.html
@@ -3950,7 +3950,7 @@
 
         <tr>
           <td align="center" style="vertical-align:top">09:30 am – 09:45 am</td>
-          <td><b>Opening Remarks</b>, by <a href="#section1">Yaochu Jin</a></td>
+          <td><b>Opening Remarks</b></td>
         </tr>
 
         <tr>
