--- a/workshop/cec2025/index.html
+++ b/workshop/cec2025/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="./MMDO_FILES/bootstrap.min.css">
   <link href="./MMDO_FILES/css" rel="stylesheet" type="text/css">
   <link href="./MMDO_FILES/style.css" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
+  <link rel="stylesheet" href="./MMDO_FILES/swiper-bundle.min.css" />
   <script type="text/javascript">
     function displayDate(dt, showDateDifference) {
       var hour = dt.getHours();
@@ -4851,7 +4851,7 @@ Prof. Zhan is an IEEE Fellow. He was a recipient of the IEEE Computational Intel
 </body>
 
   <!-- 引入 Swiper JS -->
-  <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+  <script src="./MMDO_FILES/swiper-bundle.min.js"></script>
   <!-- 初始化 Swiper -->
   <script>
       const swiper = new Swiper('.mySwiper', {
