--- a/workshop/cec2025/index.html
+++ b/workshop/cec2025/index.html
@@ -3880,7 +3880,7 @@
             height: auto; /* 保持比例 */
             object-fit: contain; /* 确保图片完整显示 */
             display: block;
-            max-width: 996px;
+            /* max-width: 996px; */
             max-height: 270px;
         }
 
@@ -3944,6 +3944,9 @@
           </div>
           <div class="swiper-slide">
               <img src="./MMDO_FILES/4.jpg" alt="MMDO2025">
+          </div>
+          <div class="swiper-slide">
+              <img src="./MMDO_FILES/5.jpg" alt="MMDO2025">
           </div>
           <div class="swiper-slide">
               <img src="./MMDO_FILES/6.jpg" alt="MMDO2025">
