--- a/workshop/cec2025/index.html
+++ b/workshop/cec2025/index.html
@@ -3860,7 +3860,7 @@
     /* 容器样式 */
         .swiper {
             width: 100%;
-            height: 700px;
+            height: 650px;
             max-height: 800px;
             margin: 0 auto;
             overflow: hidden;
@@ -3881,8 +3881,8 @@
             height: auto; /* 保持比例 */
             object-fit: contain; /* 确保图片完整显示 */
             display: block;
-            max-width: 996px;
-            max-height: 700px;
+            max-width: 100%;
+            max-height: 650px;
         }
 
         /* 自定义导航按钮样式 */
@@ -3932,7 +3932,7 @@
       <div class="swiper mySwiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <img border="0" width="100%" src="./MMDO_FILES/zhutu-new.png">
+            <img border="0" width="100%" src="./MMDO_FILES/zhutu.jpg">
           </div>
           <div class="swiper-slide">
             <img src="./MMDO_FILES/1.jpg" alt="MMDO2025">
@@ -4862,7 +4862,7 @@ Prof. Zhan is an IEEE Fellow. He was a recipient of the IEEE Computational Intel
           loop: true, // 启用循环播放
           // autoHeight: true,
           autoplay: {
-              delay: 1500, // 每2秒切换
+              delay: 2000, // 每2秒切换
               disableOnInteraction: false, // 用户交互后继续自动播放
           },
           navigation: {
